# franchise_billing

./: .env.example  .gitignore  README.md  doc.txt  issues_found.txt  pyproject.toml  requirements.txt  username_pwd.txt
apps/: __init__.py
apps/api/src/: __init__.py  main.py
docs/: psql-cheatsheet.md
docs/architecture/: api_contracts.txt  data_model.md  franchise_platform.md  schema_design.txt
domains/: __init__.py
domains/audit/application/: service.py
domains/audit/infrastructure/: models.py
domains/auth/application/: service.py
domains/auth/interfaces/: http.py  schemas.py
domains/bookings/application/: service.py
domains/bookings/domain/: enums.py
domains/bookings/infrastructure/: models.py
domains/bookings/interfaces/: http.py  schemas.py  serializers.py
domains/catalog/application/: service.py
domains/catalog/domain/: __init__.py  utils.py
domains/catalog/infrastructure/: models.py
domains/catalog/interfaces/: http.py  schemas.py
domains/customers/application/: service.py
domains/customers/domain/: customer_list_row.py  utils.py
domains/customers/infrastructure/: models.py
domains/customers/interfaces/: http.py  schemas.py  serializers.py
domains/franchises/application/: service.py
domains/users/: __init__.py
foundation/: __init__.py  errors.py
foundation/config/: __init__.py  settings.py
foundation/database/: __init__.py  bootstrap.py  session.py
foundation/observability/: __init__.py
foundation/security/: __init__.py  auth.py
foundation/web/: __init__.py  context.py  dependencies.py  responses.py
(+40 files in other folders)
